[gd_scene load_steps=24 format=3 uid="uid://cr23v8wojtk26"]

[ext_resource type="PackedScene" uid="uid://yb8q31wlggo8" path="res://Scenes/MainScene/UI/main_game_ui.tscn" id="1_027td"]
[ext_resource type="Script" uid="uid://don2q2j0hm7d5" path="res://Scenes/MainScene/main_game.gd" id="1_jt1fx"]
[ext_resource type="Script" uid="uid://d1hef3rsuhtxg" path="res://Resources/Script/game_bg.gd" id="2_ybnbx"]
[ext_resource type="Resource" uid="uid://c0lyxcc4wyy0j" path="res://Resources/Instances/Game BG/akademyk_bg.tres" id="3_ncjln"]
[ext_resource type="Resource" uid="uid://dawq28fdnksel" path="res://Resources/Instances/Game BG/sracz_bg.tres" id="4_hl25e"]
[ext_resource type="Resource" uid="uid://cw1cvuvgahl6k" path="res://Resources/Instances/Game BG/jadlodalnia_bg.tres" id="5_i5ls4"]
[ext_resource type="Resource" uid="uid://3vu67ejtxuw" path="res://Resources/Instances/Game BG/home_office_bg.tres" id="6_oqfto"]
[ext_resource type="Shader" uid="uid://cygorh2gitj0n" path="res://Shaders/simple_outline.gdshader" id="7_ni5d5"]
[ext_resource type="PackedScene" uid="uid://dwx7ltl1g7h6f" path="res://Components/PolygonButton/polygon_button_2d.tscn" id="8_8k00p"]
[ext_resource type="Texture2D" uid="uid://dwpthiah2fxly" path="res://Sprites/Temp/Student_template.png" id="8_nsbao"]
[ext_resource type="Shader" uid="uid://2e474cs8hblb" path="res://Shaders/blur.gdshader" id="9_i5ls4"]
[ext_resource type="Script" uid="uid://clhyhse11j2kt" path="res://Components/PolygonButton/polygon_button.gd" id="9_jmspi"]
[ext_resource type="Texture2D" uid="uid://cw4n3ye77g76y" path="res://Sprites/BG/CompressedBG/akademyk_small.png" id="9_ktdyc"]
[ext_resource type="AudioStream" uid="uid://3tti48gm7wn5" path="res://Sounds/pizza pepperoni.mp3" id="9_ncjln"]
[ext_resource type="Texture2D" uid="uid://bcy1bpjmy3ful" path="res://Sprites/BG/wittygowo.jpg" id="10_oqfto"]
[ext_resource type="Texture2D" uid="uid://pwryl0vvpcc0" path="res://Sprites/BG/CompressedBG/jadlodalnia_small.png" id="12_ktdyc"]
[ext_resource type="Texture2D" uid="uid://t0ucds1melv4" path="res://Sprites/BG/CompressedBG/officium_small.png" id="13_7lkbv"]
[ext_resource type="Texture2D" uid="uid://dnupu4k8f4j6u" path="res://Sprites/BG/CompressedBG/sracz_small.png" id="17_7lkbv"]

[sub_resource type="Curve" id="Curve_ktdyc"]
_limits = [1.2149351, 5.0, 0.0, 1.0]
_data = [Vector2(0, 2.591884), 0.0, 0.0, 0, 0, Vector2(0.24390242, 4.1170244), 0.0, 0.0, 0, 0, Vector2(0.41869918, 1.909584), 0.0, 0.0, 0, 0, Vector2(0.5894308, 4.8795943), 0.0, 0.0, 0, 0, Vector2(1, 2.592), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jt1fx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7lkbv"]
shader = ExtResource("7_ni5d5")
shader_parameter/check_corners = false
shader_parameter/border_color = Color(0, 0, 0, 1)
shader_parameter/width = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_y12b8"]
font_size = 32

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8k00p"]
shader = ExtResource("9_i5ls4")
shader_parameter/lod = 1.750000083125

[node name="MainGame" type="Node2D"]
script = ExtResource("1_jt1fx")
game_backgrounds = Array[ExtResource("2_ybnbx")]([ExtResource("3_ncjln"), ExtResource("4_hl25e"), ExtResource("5_i5ls4"), ExtResource("6_oqfto")])
random_ziutek_line = SubResource("Curve_ktdyc")

[node name="GameTabs" type="TabContainer" parent="."]
z_index = 50
custom_minimum_size = Vector2(640, 480)
offset_right = 640.0
offset_bottom = 480.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_jt1fx")
current_tab = 0
clip_tabs = false
tabs_visible = false

[node name="Akademyk" type="Control" parent="GameTabs"]
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 0

[node name="Shop" type="Button" parent="GameTabs/Akademyk"]
layout_mode = 0
offset_left = 122.0
offset_top = 423.0
offset_right = 228.0
offset_bottom = 454.0
text = "Go Shopping"

[node name="Ziutek" type="Sprite2D" parent="GameTabs/Akademyk"]
material = SubResource("ShaderMaterial_7lkbv")
position = Vector2(381, 283.00003)
scale = Vector2(0.76744187, 0.767442)
texture = ExtResource("8_nsbao")

[node name="AMiMir" parent="GameTabs/Akademyk" instance=ExtResource("8_8k00p")]
position = Vector2(231, 236)
texture = ExtResource("9_ktdyc")
texture_offset = Vector2(265.065, 253.82)
texture_scale = Vector2(2.825, 2.183)
polygon = PackedVector2Array(-1, -40, -7, -39, -130, 39, -99, 44, -98, 55, -101, 58, -95, 113, -44, 126, -40, 126, -8, 91, 14, 68, 21, 62, 33.425232, 48.50363, 38, 41, 80, -9, 79, -24, 77, -28, 73, -32, 24, -38)
uv = PackedVector2Array(-1, -40, -7, -39, -130, 39, -99, 44, -98, 55, -101, 58, -95, 113, -44, 126, -40, 126, -8, 91, 14, 68, 21, 62, 33.425232, 48.50363, 38, 41, 80, -9, 79, -24, 77, -28, 73, -32, 24, -38)

[node name="Sracz" type="Control" parent="GameTabs"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 1

[node name="Piss&Shit" type="Polygon2D" parent="GameTabs/Sracz"]
texture = ExtResource("17_7lkbv")
texture_offset = Vector2(94.545, 20.545)
texture_scale = Vector2(2.066, 2.145)
polygon = PackedVector2Array(115, 173, 119, 173, 152, 170, 180, 168, 200, 168, 217, 170, 228.15889, 173.16313, 241, 179, 249, 185, 252, 188, 257, 195, 259, 201, 260, 206, 261, 212, 262, 218, 261.26862, 228.12814, 258, 237, 252, 247, 228, 266, 210, 274, 204, 287, 199, 295, 192, 301, 174, 306, 159, 306, 138, 305, 115, 305, 112, 306, 107, 307, 102, 306, 94, 301, 84, 291, 76, 280, 67, 265, 60, 250, 51, 242, 50, 235, 56, 224, 88, 183, 90, 182, 92, 183, 106, 182, 111, 176)
script = ExtResource("9_jmspi")
metadata/_custom_type_script = "uid://clhyhse11j2kt"

[node name="Jadlodalnia" type="Control" parent="GameTabs"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 2

[node name="LoduwaMenu" type="MarginContainer" parent="GameTabs/Jadlodalnia"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 240
theme_override_constants/margin_bottom = 30

[node name="ColorRect" type="ColorRect" parent="GameTabs/Jadlodalnia/LoduwaMenu"]
layout_mode = 2
color = Color(0, 0, 0, 0.27058825)

[node name="Margin" type="MarginContainer" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Box" type="VBoxContainer" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box"]
layout_mode = 2
text = "Loduwa"
label_settings = SubResource("LabelSettings_y12b8")
horizontal_alignment = 1

[node name="Content" type="ScrollContainer" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Chlib" type="Button" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox"]
layout_mode = 2
text = "Stale bread"

[node name="Piwko" type="Button" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox"]
visible = false
layout_mode = 2
text = "Piwko 12.3%"

[node name="Hotdoggers" type="Button" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox"]
layout_mode = 2
text = "Hot-dog"

[node name="PizzaZabka" type="Button" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox"]
layout_mode = 2
text = "Pizza pepperoni"

[node name="Burtella" type="Button" parent="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox"]
layout_mode = 2
text = "Burtella"

[node name="ToggleBridge" type="Polygon2D" parent="GameTabs/Jadlodalnia"]
texture = ExtResource("12_ktdyc")
texture_offset = Vector2(76.13, 12.1)
texture_scale = Vector2(1.597, 1.597)
polygon = PackedVector2Array(340, 275, 338, 282, 341, 307, 350, 352, 361, 409, 378, 487, 383, 506, 541, 513, 534, 480, 534, 233, 531, 232, 530, 229, 500, 231, 421, 232, 416, 232, 383, 250)
uv = PackedVector2Array(340, 275, 338, 282, 341, 307, 350, 352, 361, 409, 378, 487, 383, 506, 541, 513, 534, 480, 534, 233, 531, 232, 530, 229, 500, 231, 421, 232, 416, 232, 383, 250)
script = ExtResource("9_jmspi")
metadata/_custom_type_script = "uid://clhyhse11j2kt"

[node name="HomeOffice" type="Control" parent="GameTabs"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 3

[node name="GamingMenu" type="MarginContainer" parent="GameTabs/HomeOffice"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 102
theme_override_constants/margin_right = 121
theme_override_constants/margin_bottom = 15

[node name="ColorRect" type="ColorRect" parent="GameTabs/HomeOffice/GamingMenu"]
layout_mode = 2
color = Color(0, 0, 0, 0.6431373)

[node name="Margin" type="MarginContainer" parent="GameTabs/HomeOffice/GamingMenu/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Relaxxxxx" type="Polygon2D" parent="GameTabs/HomeOffice"]
texture = ExtResource("13_7lkbv")
texture_scale = Vector2(2.066, 1.748)
polygon = PackedVector2Array(430, 117, 436, 111, 446, 109, 455, 109, 464, 111, 477, 114, 486, 118, 494, 123, 498, 128, 500, 132, 501, 137, 500, 142, 500, 150, 500, 160, 497, 176, 474, 240, 458, 280, 445, 311, 442, 317, 438, 320, 428, 321, 417, 320, 405, 317, 405, 317, 403, 315, 395, 307, 389, 297, 387, 293, 388, 282, 389, 276, 417, 141, 420, 134, 427, 126, 429, 122, 430, 118)
uv = PackedVector2Array(499.9991, 130.51859, 505.9991, 124.5186, 515.99915, 122.5186, 524.99915, 122.5186, 533.99915, 124.5186, 546.99915, 127.518585, 555.99915, 131.51859, 563.99915, 136.51859, 567.99915, 141.51859, 569.99915, 145.51859, 570.99915, 150.51859, 569.99915, 155.51859, 569.99915, 163.51859, 569.99915, 173.51859, 566.99915, 189.51859, 543.99915, 253.51859, 527.99915, 293.5186, 514.99915, 324.5186, 511.9991, 330.5186, 507.9991, 333.5186, 497.9991, 334.5186, 486.9991, 333.5186, 474.9991, 330.5186, 474.9991, 330.5186, 472.9991, 328.5186, 464.9991, 320.5186, 458.9991, 310.5186, 456.9991, 306.5186, 457.9991, 295.5186, 458.9991, 289.5186, 486.9991, 154.51859, 489.9991, 147.51859, 496.9991, 139.51859, 498.9991, 135.51859, 499.9991, 131.51859)
script = ExtResource("9_jmspi")
metadata/_custom_type_script = "uid://clhyhse11j2kt"

[node name="Gaming" type="Polygon2D" parent="GameTabs/HomeOffice"]
texture = ExtResource("13_7lkbv")
texture_offset = Vector2(70, 13)
texture_scale = Vector2(2.066, 1.748)
polygon = PackedVector2Array(0, 353, 106, 336, 112, 324, 123, 310, 141, 290, 154, 280, 172, 269, 189, 262, 208, 257, 218, 255, 228, 254, 246, 254, 264, 257, 279, 263, 291, 270, 302, 278, 311, 286, 317, 294, 356, 266, 346, 245, 327, 201, 307, 156, 304, 150, 303, 140, 302, 98, 302, 87, 295, 87, 295, 120, 36, 133, 22, 87, 12, 87, 21, 119, 32, 151, 34, 158, 34, 163, 35, 170, 33, 174, 16, 207, 2, 235, -5, 248, -48, 312, -53, 337, -35, 359)
uv = PackedVector2Array(0, 353, 106, 336, 112, 324, 123, 310, 141, 290, 154, 280, 172, 269, 189, 262, 208, 257, 218, 255, 228, 254, 246, 254, 264, 257, 279, 263, 291, 270, 302, 278, 311, 286, 317, 294, 356, 266, 346, 245, 327, 201, 307, 156, 304, 150, 303, 140, 302, 98, 302, 87, 12, 87, 21, 119, 32, 151, 34, 158, 34, 163, 35, 170, 33, 174, 16, 207, 2, 235, -5, 248, -48, 312, -53, 337, -35, 359)
script = ExtResource("9_jmspi")
metadata/_custom_type_script = "uid://clhyhse11j2kt"

[node name="MainGameUI" parent="." instance=ExtResource("1_027td")]

[node name="Blur" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8k00p")
position = Vector2(338, 234)
texture = ExtResource("10_oqfto")

[node name="BG" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(390, 330)
scale = Vector2(0.484, 0.466)
texture = ExtResource("17_7lkbv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ncjln")
volume_db = -20.0

[connection signal="gui_input" from="GameTabs" to="." method="_get_mouse_click"]
[connection signal="pressed" from="GameTabs/Akademyk/Shop" to="." method="_show_shop"]
[connection signal="pressed" from="GameTabs/Akademyk/AMiMir" to="." method="add_hp" binds= [80]]
[connection signal="pressed" from="GameTabs/Sracz/Piss&Shit" to="." method="add_bladder" binds= [40]]
[connection signal="pressed" from="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox/Chlib" to="." method="_loduwa_button" binds= [0]]
[connection signal="pressed" from="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox/Piwko" to="." method="_loduwa_button" binds= [1]]
[connection signal="pressed" from="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox/Hotdoggers" to="." method="_loduwa_button" binds= [2]]
[connection signal="pressed" from="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox/PizzaZabka" to="." method="_loduwa_button" binds= [3]]
[connection signal="pressed" from="GameTabs/Jadlodalnia/LoduwaMenu/ColorRect/Margin/Box/Content/ContentVBox/Burtella" to="." method="_loduwa_button" binds= [4]]
[connection signal="pressed" from="GameTabs/Jadlodalnia/ToggleBridge" to="." method="_toggle_fridge"]
[connection signal="pressed" from="GameTabs/HomeOffice/Relaxxxxx" to="." method="_drink_piwko"]
[connection signal="pressed" from="GameTabs/HomeOffice/Gaming" to="." method="_show_game_center"]
[connection signal="OnAkademykPress" from="MainGameUI" to="." method="akademyk_button"]
[connection signal="OnHomeOfficePress" from="MainGameUI" to="." method="office_button"]
[connection signal="OnJadlodalniaPress" from="MainGameUI" to="." method="jadlo_button"]
[connection signal="OnQuitPress" from="MainGameUI" to="." method="quit_button"]
[connection signal="OnSraczPress" from="MainGameUI" to="." method="sracz_button"]
[connection signal="on_game_center_close" from="MainGameUI" to="." method="_hide_game_center"]
[connection signal="on_shop_close" from="MainGameUI" to="." method="_hide_shop"]
